--- a/public/views/fms/demo/summary.html
+++ b/public/views/fms/demo/summary.html
@@ -8,5 +8,7 @@
         <!-- Breadcrumbs -->
         <div ng-include src="'views/fms/live/partials/breadcrumbs.html?' + assetVersion"></div>
 
+        <!-- Demo summary -->
+        <div ng-include src="'views/fms/demo/partials/summary-layout.html?' + assetVersion"></div>
 	</div>
 </div>
