--- a/public/views/header.html
+++ b/public/views/header.html
@@ -106,8 +106,8 @@
         <!-- Log out -->
 		<ul class="nav-right-button list-unstyled pull-right">
 			<li>
-				<a ng-click="endSession();" ng-href='/auth/logout' class="btn btn-logout">
-					LOGOUT &nbsp;&nbsp;<i class="fa fa-sign-out"></i>
+				<a ng-click="Rover.endSession()" class="btn btn-logout">
+					Logout &nbsp;&nbsp;<i class="fa fa-sign-out"></i>
 				</a>
 			</li>
 		</ul>
