ASLR summary page

--- a/public/views/fms/demo/partials/summary-overall-scores.html
+++ b/public/views/fms/demo/partials/summary-overall-scores.html
@@ -3,7 +3,7 @@
     Overall Score
 </div>
 
-<div class="panel-body text-center">
+<div class="panel-body text-left">
 
     <!-- Total score -->
     <div class="row">
@@ -12,23 +12,58 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-sm-12">
-            TODO: bar graph
+    <br>
+
+    <div class="row ">
+        <div class="col-sm-12 no-gutter">
+            <div class="col-sm-1" style="background-color: #f48b4a">&nbsp;</div>
+            <div class="col-sm-1" style="background-color: #ed3941">&nbsp;</div>
+            <div class="col-sm-2" style="background-color: #89c443">&nbsp;</div>
+            <div class="col-sm-1" style="background-color: #ed3941">&nbsp;</div>
+            <div class="col-sm-2" style="background-color: #89c443">&nbsp;</div>
+            <div class="col-sm-4 text-center" style="background-color: black; color: white">15/21</div>
         </div>
     </div>
 
+    <br>
+
     <!-- Movement Efficiency -->
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 text-center">
             Movement Efficiency
         </div>
     </div>
 
+    <br>
+
     <div class="row">
-        <div class="col-sm-12">
-            TODO: circular graph
+        <div class="col-sm-12" style="height: 180px;">
+            <div style="position: relative; margin: 0 auto; height: 180px; width: 180px;">
+                <div style="
+                    position:absolute;
+                    top: 0;
+                    left: 30px;
+                    height:160px;
+                    width:160px;
+                    background-color:#000;
+                    border-radius: 50%;">
+                </div>
+                <div style="
+                    position:absolute;
+                    top: 10px;
+                    left: 40px;
+                    height:140px;
+                    width:140px;
+                    line-height: 140px;
+                    background-color:#fff;
+                    border-radius: 50%;
+                    text-align: center;
+                    font-size: 35px;
+                    color: #000">
+                    71%
+                </div>
+            </div>
         </div>
     </div>
-    
+
 </div>
