Completed ASLR tasks

--- a/public/views/fms/demo/partials/summary-content.html
+++ b/public/views/fms/demo/partials/summary-content.html
@@ -64,6 +64,15 @@
             </span>
         </div>
         <div class="row linear-heat-gradient">
+            <div style="
+                position: absolute;
+                bottom: -5%;
+                left: 60%;
+                display: block;
+                height: 75%;
+                width: 2px;
+                background-color: #000;">
+            </div>
         </div>
     </div>
 
@@ -110,6 +119,15 @@
             </span>
         </div>
         <div class="row linear-heat-gradient">
+            <div style="
+                position: absolute;
+                bottom: -5%;
+                left: 52%;
+                display: block;
+                height: 75%;
+                width: 2px;
+                background-color: #000;">
+            </div>
         </div>
     </div>
 
