--- a/public/views/fms/demo/partials/summary-overall-scores.html
+++ b/public/views/fms/demo/partials/summary-overall-scores.html
@@ -29,7 +29,7 @@
 
     <!-- Movement Efficiency -->
     <div class="row">
-        <div class="col-sm-12 text-center">
+        <div class="col-sm-12 text-left">
             Movement Efficiency
         </div>
     </div>
@@ -37,30 +37,14 @@
     <br>
 
     <div class="row">
-        <div class="col-sm-12" style="height: 180px;">
-            <div style="position: relative; margin: 0 auto; height: 180px; width: 180px;">
-                <div style="
-                    position:absolute;
-                    top: 0;
-                    left: 30px;
-                    height:160px;
-                    width:160px;
-                    background-color:#000;
-                    border-radius: 50%;">
-                </div>
-                <div style="
-                    position:absolute;
-                    top: 10px;
-                    left: 40px;
-                    height:140px;
-                    width:140px;
-                    line-height: 140px;
-                    background-color:#fff;
-                    border-radius: 50%;
-                    text-align: center;
-                    font-size: 35px;
-                    color: #000">
-                    71%
+        <div class="col-sm-12">
+            <div style="position: relative; margin: 0 auto; height: 120px; width: 120px;">
+                <div class="c100 p71 green">
+                    <span>71%</span>
+                    <div class="slice">
+                        <div class="bar"></div>
+                        <div class="fill"></div>
+                    </div>
                 </div>
             </div>
         </div>
