--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -16,7 +16,7 @@
 
         <!-- Submit movement data form -->
 		<li>
-            <a href="#/movementsubmit"><span>submit movement data</span></a>
+            <a href="#/submit-movement"><span>submit movement data</span></a>
         </li>
 
         <!-- Submit FMS test form -->
@@ -69,7 +69,7 @@
             </ul>
         </li>
 
-		<li ng-controller="MovementScreenController" ng-show="Rover.isLocal == true">
+		<!-- <li ng-controller="MovementScreenController" ng-show="Rover.isLocal == true">
             <a href="#/movements"><span>movement screen</span></a>
 			<ul style="display: block;">
                 <li ng-repeat="movement_page in data.movement_pages">
@@ -82,6 +82,6 @@
                     </a>
 				</li>
             </ul>
-        </li>
+        </li> -->
     </ul>
 </div>
