--- a/public/views/dashboard-v2/group-partials/members.html
+++ b/public/views/dashboard-v2/group-partials/members.html
@@ -1,15 +1,13 @@
 
 <div class="panel panel-default">
+    <div class="panel-heading">
+        Athletes in {{ data.group.selected.name }} ({{ data.group.selected.sport_name }})
+    </div>
     <div class="panel-body">
-        <div class="col-sm-12">
-            <h2>
-                {{ data.group.selected.name }} ({{ data.group.selected.sport_name }})
-            </h2>
-        </div>
 
         <div class="col-sm-12">
             <div ng-hide="data.member.list.length > 1">
-                The <b>{{ <data class="group"></data>.selected.name }}</b> team does not have any
+                The <b>{{ data.group.selected.name }}</b> team does not have any
                 athletes yet. Add one below to get started!
             </div>
 
