--- a/public/views/fms/live/partials/test-trials.html
+++ b/public/views/fms/live/partials/test-trials.html
@@ -6,7 +6,7 @@
 				<div class="col-sm-12 ng-scope movement-trial-list" style="padding:0px;">
 					<div
                         ng-repeat="trial in fms.current.trials"
-                        ng-click="fms.current.trial = trial"
+                        ng-click="fms.current.trial = trial;run.name = null"
                         ng-class="{'active': trial == fms.current.trial}">
 
 						<div class="trial-label">
