Fixed new athlete form bug + added directive for editing/viewing athlete and team info

--- a/public/views/dashboard-v2/group-partials/members.html
+++ b/public/views/dashboard-v2/group-partials/members.html
@@ -7,8 +7,8 @@
 
         <div class="col-sm-12">
             <div ng-hide="data.member.list.length > 1">
-                The <b>{{ data.group.selected.name }}</b> team does not have any
-                athletes yet. Add one below to get started!
+                The <b>{{ data.group.selected.name }}</b> do not have any
+                members yet. Add one below to get started!
             </div>
 
             <!-- List of members -->
