--- a/public/views/dashboard-v2/group-partials/new-member-form.html
+++ b/public/views/dashboard-v2/group-partials/new-member-form.html
@@ -19,7 +19,7 @@
                     <input
                         type="text"
                         class="form-control"
-                        ng-model="data.athlete.new.first_name"
+                        ng-model="data.member.new.first_name"
                         placeholder="First Name"
                         required>
                 </div>
@@ -29,7 +29,7 @@
                     <input
                         type="text"
                         class="form-control"
-                        ng-model="data.athlete.new.last_name"
+                        ng-model="data.member.new.last_name"
                         placeholder="Last Name"
                         required>
                 </div>
@@ -43,7 +43,7 @@
                         <div class="col-xs-5">
                             <input
                                 class="form-control"
-                                ng-model="data.athlete.new.feet"
+                                ng-model="data.member.new.feet"
                                 placeholder="Feet"
                                 type="number"
                                 min="1" max="10"
@@ -52,7 +52,7 @@
                         <div class="col-xs-5">
                             <input
                                 class="form-control"
-                                ng-model="data.athlete.new.inches"
+                                ng-model="data.member.new.inches"
                                 placeholder="Inches"
                                 type="number"
                                 min="0" max="11"
@@ -65,7 +65,7 @@
                 <div class="form-group">
                     <input
                         class="form-control"
-                        ng-model="data.athlete.new.weight_lbs"
+                        ng-model="data.member.new.weight_lbs"
                         placeholder="Weight (lbs)"
                         type="number"
                         min="50" max="500"
@@ -76,7 +76,7 @@
                 <div class="form-group">
                     <input
                         class="form-control"
-                        ng-model="data.athlete.new.age"
+                        ng-model="data.member.new.age"
                         placeholder="Age"
                         type="number"
                         min="1" max="100"
