--- a/public/views/dashboard-v2/group.html
+++ b/public/views/dashboard-v2/group.html
@@ -2,7 +2,7 @@
 <!-- Header -->
 <div ng-include src="'views/dashboard-v2/partials/header.html?' + assetVersion"></div>
 
-<div class="page page-dashboard" data-ng-controller="FMSFormController">
+<div class="page page-dashboard">
 
     <!-- Breadcrumbs -->
     <div ng-include src="'views/dashboard-v2/partials/breadcrumbs.html?' + assetVersion"></div>
@@ -34,7 +34,7 @@
     		<div class="col-sm-12">
 
                 <!-- Group details -->
-                <div ng-include src="'views/dashboard-v2/group-partials/details.html?' + assetVersion"></div>
+                <div ng-include src="'views/dashboard-v2/group-partials/group-details.html?' + assetVersion"></div>
     		</div>
     	</div>
     </section>
