--- a/public/views/fmstest.html
+++ b/public/views/fmstest.html
@@ -372,7 +372,7 @@
 										<br>
 
 										<div class="text-center">
-											<button type="submit" class="btn btn-primary">Submit Test Results</button>
+											<button type="submit" class="btn btn-primary">Submit Results and Movement Files</button>
 										</div>
 									</div>
 								</div>
