--- a/public/views/submit-movement-demo.html
+++ b/public/views/submit-movement-demo.html
@@ -19,7 +19,7 @@
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Choose a sport.
+                    1. Choose a sport.
                 </div>
                 <div class="panel-body">
                     <div class="btn-group">
@@ -52,7 +52,7 @@
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Select a movement.
+                    2. Select a movement.
                 </div>
                 <div class="panel-body">
                     <a
@@ -72,7 +72,7 @@
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Submit data.
+                    3. Submit data.
                 </div>
                 <div class="panel-body">
 
