--- a/public/views/dashboard-v2/group-partials/group-details.html
+++ b/public/views/dashboard-v2/group-partials/group-details.html
@@ -19,7 +19,7 @@
                 </button>
                 <button
                     type="button"
-                    ng-click="Rover.alert('Demo')"
+                    ng-click="DeleteGroup()"
                     class="btn btn-danger"
                     name="button">
 
