--- a/public/views/dashboard-v2/member-partials/member-details.html
+++ b/public/views/dashboard-v2/member-partials/member-details.html
@@ -27,7 +27,9 @@
             <div
                 data-ui-editable-list-item
                 data-label="Profile created"
-                data-value="data.member.selected.created_at">
+                data-display="{{data.member.selected.created_at}}"
+                data-value="data.member.selected.created_at"
+                data-type="date">
             </div>
 
             <!-- Phone -->
@@ -41,7 +43,8 @@
             <div
                 data-ui-editable-list-item
                 data-label="Sex"
-                data-value="">
+                data-value=""
+                data-type="sex">
             </div>
 
             <!-- Date of Birth -->
