--- a/public/views/header.html
+++ b/public/views/header.html
@@ -24,7 +24,7 @@
             <!-- Settings page -->
             <li class="pull-right">
                 <div class="btn-group">
-                    <button class="btn btn-default" ng-click="Rover.browseTo.settings()">
+                    <button class="btn btn-default" ng-click="Rover.browseTo.config()">
                         Settings &nbsp;&nbsp;<i class="fa fa-cog"></i>
                     </button>
                 </div>
