--- a/public/views/partials/ui-editable-list-item.html
+++ b/public/views/partials/ui-editable-list-item.html
@@ -1,16 +1,36 @@
 
 <!-- Used in the uiEditableListItem directive -->
 <div class="row">
-    <div class="col-sm-5 text-right">
+    <div class="col-sm-4 text-right">
         {{ label }}
     </div>
 
-    <div class="col-sm-7">
-        <b ng-hide="isEditing">
-            {{ value }}
-        </b>
-        <input ng-show="isEditing" type="text" value="{{ value }}">
-    </div>
+    <div class="col-sm-8">
+        <b ng-hide="isEditing" ng-switch="type">
 
-    {{ test }}
+            <!-- Date -->
+            <span ng-switch-when="date">
+                {{ display || value | date:'MMMM d, yyyy' }}
+
+                <input ng-show="isEditing" ng-model="value" type="text" class="form-control">
+            </span>
+
+            <!-- Sex -->
+            <span ng-switch-when="sex">
+                {{ value }}
+                
+                <select ng-show="isEditing" ng-model="value" ng-selected="value" class="form-control">
+                    <option value="female">Female</option>
+                    <option value="male">Male</option>
+                </select>
+            </span>
+
+            <!-- Default -->
+            <span ng-switch-default>
+                {{ display || value }}
+
+                <input ng-show="isEditing" ng-model="value" type="text" class="form-control">
+            </span>
+        </b>
+    </div>
 </div>
