Added/modified athlete CRUD methods

--- a/public/views/partials/ui-editable-list-container.html
+++ b/public/views/partials/ui-editable-list-container.html
@@ -1,7 +1,7 @@
 
 <!-- Used in the uiEditableListContainer directive -->
 <div class="row">
-    <div class="col-sm-12 btn-group">
+    <div class="col-sm-12 btn-group text-right">
 
         <button type="button" ng-click="delete()" ng-hide="isEditing" class="btn btn-danger">
             Delete
