--- a/public/views/dashboard-v2/member-partials/member-details.html
+++ b/public/views/dashboard-v2/member-partials/member-details.html
@@ -7,7 +7,8 @@
     <div class="panel-body">
 
         <div
-            data-ui-editable-list-container>
+            data-ui-editable-list-container
+            data-delete="deleteProfile">
 
             <!-- First name -->
             <div
