--- a/public/views/profile/partials/form.html
+++ b/public/views/profile/partials/form.html
@@ -1,7 +1,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        Profile details
+        Profile Details
     </div>
 
     <div class="panel-body">
