--- a/public/views/group/edit.html
+++ b/public/views/group/edit.html
@@ -8,27 +8,27 @@
         </div>
     </div>
 
-    <h1>Add an Athlete</h1>
+    <h1>Edit {{ group.name }}</h1>
     <br>
 
-    <form ng-submit="createProfile()">
+    <form ng-submit="createGroup()">
         <div class="row">
 
-            <!-- New profile form -->
+            <!-- Edit form -->
             <div class="col-sm-12 col-md-8">
-                <div data-ng-include="'views/profile/partials/form.html?' + global.assetVersion"></div>
+                <div data-ng-include="'views/group/partials/form.html?' + global.assetVersion"></div>
             </div>
 
-            <!-- Profile picture -->
+            <!-- Team picture -->
         	<div class="col-sm-12 col-md-4">
-                <div data-ng-include src="'views/profile/partials/upload-photo.html?' + global.assetVersion"></div>
+                <div data-ng-include src="'views/group/partials/upload-photo.html?' + global.assetVersion"></div>
         	</div>
         </div>
 
         <!-- Action buttons -->
         <div class="row">
             <div class="col-sm-12 text-center">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">Save Changes</button>
             </div>
         </div>
     </form>
